@@ -51,6 +51,7 @@ core 2.3.0 - not released yet
 	* Added: Todoyu.ListScrollLoader()
 	* Added: class TodoyuTimezoneManager
 	* Added: Set timezone in database for date calculations
+	* Added: Hook based voting - TodoyuHookManager::callHookVoting
 	* Changed: Encoding of title in header-template is now optional
     * Changed: Set default error - logging on error instead of debug
 	* Changed: Sticky notification mode: info now stays (was: stays 15s)
